dark mode fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: white;
+    --background-start-rgb: #E3A1D9;
+    --background-end-rgb: #E08AC2;
   }
 }
 
